Dev-Ops/k8s/k8s-in-action/5.Services/5.4-Exposing-Services-Externally-Through-Ingress/5.4.1-Creating-An-Ingress/kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service
spec:
  #type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
      #nodePort: 30123
  - name: https
    port: 443
    targetPort: https
      #nodePort: 30124
      #sessionAffinity: ClientIP
  selector:
    app: kubia
