Dev-Ops/k8s/k8s-in-action/5.Services/5.4-Exposing-Services-Externally-Through-Ingress/5.4.1-Creating-An-Ingress/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubia-service
            port: 
              number: 80
